--- a/package.json
+++ b/package.json
@@ -52,12 +52,16 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.16.4",
     "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
-    "jspdf": "^2.5.2",
+    "jspdf": "^4.2.0",
+    "jsqr": "^1.4.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
+    "mssql": "^12.2.0",
     "next-themes": "^0.4.4",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -65,7 +69,7 @@
     "react-hot-toast": "^2.6.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.26.0",
     "recharts": "^2.15.4",
@@ -74,12 +78,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2",
-    "qrcode": "^1.5.3",
-    "html5-qrcode": "^2.3.8",
-    "jsqr": "^1.4.0",
-    "mssql": "^10.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
